These are the Release Notes leading-up to Revision 2.4.5 of netperf:

Things changed in this release:

*) Track the bouncing interfaces that are linux processor affinity

*) Fixes for Solaris sendfilev usage.

*) A TCP_MSS test has been added which will report the MSS for a data
   connection setup as if the test were a TCP_STREAM test.  While the
   remote (netserver) is tricked into thinking it is to accept a
   TCP_STREAM test, no actual data will flow over the connection.
   This means that if the MSS is one which might change over the life
   of the connection, it will not be reflected in the test output.
   Should this prove to be a problem a single send() can be arranged
   along with the return of the shutdown();recv() handshake.

   The idea is that this might be useful for netperf scripts wanting
   to parameterize things based on the MSS - for example the
   packet_byte_script.

*) The width of the confidence interval can be specified in fractions
   of a percent for the confidence of a clean, close, comfortable
   calculation. :)

*) Honor the global -B option in a TCP_SENDFILE test.

*) Correct the sense of Send/Recv in the banner of a TCP_MAERTS test.

These are the Release Notes for Revision 2.4.4 of netperf:

Things changed in this release:

*) The LOC_CPU and REM_CPU tests will report their respective beliefs
   as to the number of CPUs present when the verbosity is set to more
   than one.  This can be used when trying to diagnose issues with CPU
   utilization.

*) A kind soul who wishes to remain anonymous provided a patch to
   enable use of sendfile() on OSX.

*) Fix a misplaced \n in a format string of send_tcp_maerts, courtesy
   of Alexander Duyck.

*) There is an experimental global -r option which will allow one to
   include CPU utilization measurements, but make the decision about
   hitting confidence based on the result only.  The test banner will
   reflects this when -r is used.
